# recipe-extraction-demo

./: DEMO.md  README.md  extract.py  pyproject.toml  requirements.txt  schema.json  validate_outputs.py
data/output/: recipe_1_teriyaki_chicken.json  recipe_1_thai_basil_pork.json  recipe_2_beef_barbacoa.json  recipe_2_coconut_curry_vegetable.json  recipe_3_halibut_spring_vegetables.json  recipe_3_mediterranean_salmon.json
output/: recipe_1_teriyaki_chicken.json  recipe_2_beef_barbacoa.json  recipe_3_mediterranean_salmon.json
prompts/: recipe_extraction_prompt.txt
recipe-extractor/: README.md
schema/: schema-sample.json  schema.json
scripts/: generate_recipe_pdfs.py
src/: extract.py
